name:                cube-escape
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Xiaotong Lin, Kanlin Wang, Dingxian Wang, Yen-Ju Tseng 
maintainer:          xil162@ucsd.edu, kaw008@ucsd.edu, diw021@ucsd.edu, ytseng@ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cube-escape
  hs-source-dirs:      src
  exposed-modules:     Features.Escape
                     , Features.Board
                     , Features.EnterName
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , linear
                     , microlens
                     , microlens-th
                     , random
                     , vty
                     , MonadRandom
                     , cursor
                     , cursor-brick
                     , directory
                     , path
                     , path-io
                     , pretty-show
                     , text
                     , filepath
  default-language:    Haskell2010

executable cescape
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fno-warn-unused-do-bind -O3
  build-depends:       base >= 4.7 && < 5
                     , cube-escapee
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
  default-language:    Haskell2010
