name:                cube-escape
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Xiaotong Lin, Kanlin Wang, Dingxian Wang, Yen-Ju Tseng 
maintainer:          xil162@ucsd.edu, kaw008@ucsd.edu, diw021@ucsd.edu, ytseng@ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cube-escape
  hs-source-dirs:      src
  exposed-modules:     Features.Escape
                     , Features.Board
                     , Features.EnterName
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , linear
                     , microlens
                     , microlens-th
                     , random
                     , vty
                     , MonadRandom
                     , cursor
                     , cursor-brick
                     , directory
                     , path
                     , path-io
                     , pretty-show
                     , text
                     , filepath
  default-language:    Haskell2010

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base >= 4.7 && < 5,
                    brick,
                    containers,
                    linear,
                    microlens,
                    microlens-th,
                    random,
                    vty,
                    MonadRandom,
                    cursor,
                    cursor-brick,
                    directory,
                    path,
                    path-io,
                    pretty-show,
                    text,
                    filepath,
                    directory,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process,
                    cube-escape
  other-modules:    Common 
