name:                cube-escape
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Xiaotong Lin, Kanlin Wang, Dingxian Wang, Yen-Ju Tseng 
maintainer:          xil162@ucsd.edu, kaw008@ucsd.edu, diw021@ucsd.edu, ytseng@ucsd.edu
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cube-escape
  hs-source-dirs:      src
  other-modules:       Features.Board
                     , Features.EnterName
                     , Features.Escape
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fno-warn-unused-do-bind -O3
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , optparse-applicative
                     , brick
                     , cursor-brick
                     , cursor
                     , path
                     , path-io
                     , pretty-show
                     , text
                     , vty
                     , containers
                     , linear
                     , microlens
                     , microlens-th
                     , random
                     , MonadRandom
                     , transformers
                     , QuickCheck
                     , lens
                     , extra

  default-language:    Haskell2010

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests,
                    src
  other-modules:       Features.Board
                     , Features.EnterName
                     , Features.Escape
  Default-Extensions: OverloadedStrings
  main-is:          Test.hs
  build-depends:    base >= 4.7 && < 5
                     , directory
                     , filepath
                     , optparse-applicative
                     , brick
                     , cursor-brick
                     , cursor
                     , path
                     , path-io
                     , pretty-show
                     , text
                     , vty
                     , containers
                     , linear
                     , microlens
                     , microlens-th
                     , random
                     , MonadRandom
                     , transformers
                     , QuickCheck
                     , lens
                     , extra,
                    QuickCheck,
                    tasty,
                    tasty-hunit,
                    tasty-quickcheck,
                    process
                    --cube-escape
  other-modules:    Common 
